# dinfox-dsm

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  README.md  readme.md
.github/matrices/: cmake-flags.json
application/inc/: at_bus.h  dsm_flags.h  dsm_flags_slave.h  error.h  error_base.h  error_patch.h  mode.h  xm_flags.h
application/src/: error.c  main.c
drivers/components/inc/: digital.h  led.h  load.h  neom8n.h  neom8x_driver_flags.h  s2lp.h  s2lp_driver_flags.h  sensors_hw.h  sht3x_driver_flags.h  sky66423.h  sx126x_driver_flags.h  tic.h
drivers/components/src/: led.c  load.c  neom8x_hw.c  s2lp.c  s2lp_hw.c  sensors_hw.c  sht3x.c  sht3x_hw.c  sx126x_hw.c  tic.c
drivers/device/inc/: stm32g4xx_device_flags.h  stm32l0xx_device_flags.h  types.h
drivers/mac/inc/: lmac_driver_flags.h
drivers/mac/src/: lmac_hw.c
drivers/peripherals/inc/: dma.h  gpio_mapping.h  i2c_address.h  mapping.h  mcu_mapping.h  nvic.h  nvic_priority.h  nvm.h  nvm_address.h  rtc.h  stm32g4xx_drivers_flags.h  stm32l0xx_drivers_flags.h  tim.h
drivers/peripherals/src/: aes.c  dma.c  gpio_mapping.c  i2c.c  lpuart.c  mcu_mapping.c  rcc.c
drivers/registers/inc/: stm32g4xx_registers_flags.h  stm32l0xx_registers_flags.h
drivers/utils/inc/: embedded_utils_flags.h
drivers/utils/src/: terminal_hw.c
inc/: mode.h  version.h
inc/applicative/: at.h  at_bus.h  bpsm.h  ddrm.h  dinfox.h  error.h  lvrm.h  rrm.h  rs485.h  rs485_common.h  sm.h
inc/components/: digital.h  led.h  load.h  neom8n.h  power.h  relay.h  s2lp.h  sht3x.h
inc/dinfox/: bpsm_reg.h  common_reg.h  ddrm_reg.h  dinfox.h  dinfox_common.h  dinfox_reg.h  dinfox_types.h  dmm_reg.h  gpsm_reg.h  lvrm_reg.h  mpmcm_reg.h  node_common.h  r4s8cr_reg.h  rrm_reg.h  sm_reg.h  uhfm_reg.h
inc/nodes/: bpsm.h  common.h  ddrm.h  dinfox.h  gpsm.h  lbus.h  lbus_common.h  lvrm.h  node.h  rrm.h  sm.h  uhfm.h
inc/peripherals/: adc.h  aes.h  dma.h  exti.h  flash.h  gpio.h  i2c.h  iwdg.h  lptim.h  lpuart.h  mapping.h  nvic.h  nvm.h  pwr.h  rcc.h  rtc.h  spi.h  tim.h  usart.h
inc/registers/: aes_reg.h  s2lp_reg.h  tim_reg.h
inc/sigfox/: rf_api.h
inc/utils/: math.h  parser.h  string.h
linker/: gpsm_hw1-0.ld  lvrm_hw1-0.ld  lvrm_hw2-0.ld  uhfm_hw1-0.ld
linker/BPSM_HW1_0/: gcc_arm.ld
linker/HW1_0/: gcc_arm.ld
middleware/analog/inc/: analog.h  measure.h  simulation.h
middleware/analog/src/: analog.c  measure.c  simulation.c
middleware/cli/inc/: cli.h
middleware/cli/src/: cli.c
middleware/digital/inc/: digital.h
middleware/digital/src/: digital.c
middleware/gps/inc/: gps.h
middleware/gps/src/: gps.c
middleware/node/inc/: bcm.h  bpsm.h  common.h  ddrm.h  ddrm_reg.h  dinfox_registers_flags.h  gpsm.h  lvrm.h  lvrm_reg.h  mpmcm.h  node.h  node_register.h  node_status.h  rrm.h  sm.h  sm_reg.h  uhfm.h  una_at_flags.h  una_lib_flags.h
middleware/node/src/: bcm.c  bpsm.c  common.c  ddrm.c  gpsm.c  lbus.c  lvrm.c  mpmcm.c  node.c  node_register.c  rrm.c  sm.c  uhfm.c
middleware/power/inc/: power.h
middleware/power/src/: power.c
middleware/sigfox/inc/: rfe.h  sigfox_ep_flags.h
middleware/sigfox/src/: mcu_api.c  rf_api.c  rf_api_s2lp.c  rf_api_sx126x.c  rfe.c
script/: BPSM_HW1-0_Debug.launch  BPSM_HW1-0_Run.launch  BPSM_HW1_0.jlink  BPSM_HW1_0_Run.launch  DDRM_HW1-0_Run.launch  DDRM_HW1_0.jlink  DDRM_HW1_0_Debug.launch  HW1_0.jlink  LVRM_HW1-0_Debug.launch  LVRM_HW1-0_Run.launch  LVRM_HW1_0.jlink  RRM_HW1-0_Debug.launch  RRM_HW1-0_Run.launch  RRM_HW1_0.jlink  SM_HW1-0_Debug.launch  SM_HW1-0_Run.launch  SM_HW1_0.jlink  UHFM_HW1-0_Debug.launch  UHFM_HW1-0_Run.launch  UHFM_HW1_0.jlink  XM_HW1-0_Debug.launch  XM_HW1-0_Run.launch  bcm_hw1-0.jlink  bcm_hw1-0_debug.launch  bcm_hw1-0_run.launch  bpsm_hw1-0.jlink  bpsm_hw1-0_debug.launch  bpsm_hw1-0_run.launch  ddrm_hw1-0.jlink  ddrm_hw1-0_debug.launch  ddrm_hw1-0_run.launch  git_version.sh  gpsm_hw1-0.jlink  gpsm_hw1-0_debug.launch  gpsm_hw1-0_run.launch  lvrm_hw1-0.jlink  lvrm_hw1-0_debug.launch  lvrm_hw1-0_run.launch  lvrm_hw2-0.jlink  lvrm_hw2-0_debug.launch  (+16 more)
src/: main.c
src/applicative/: at.c  at_bus.c  error.c  rs485.c
src/components/: digital.c  led.c  load.c  neom8n.c  power.c  relay.c  s2lp.c  sht3x.c
src/dinfox/: dinfox.c  dinfox_common.c  dinfox_types.c
src/nodes/: bpsm.c  common.c  ddrm.c  dinfox.c  gpsm.c  lbus.c  lvrm.c  node.c  rrm.c  sm.c  uhfm.c
src/peripherals/: adc.c  aes.c  dma.c  exti.c  flash.c  gpio.c  i2c.c  lptim.c  lpuart.c  mapping.c  nvm.c  pwr.c  rcc.c  rtc.c  spi.c  tim.c  usart.c
src/sigfox/: mcu_api.c  rf_api.c
src/utils/: math.c  parser.c  string.c
startup/: xm_startup.c
